# md2report

./: .gitattributes  404.html  LICENSE.md  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: docker-build-push.yml
backend/: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  md2report.py  pyproject.toml
backend/config/: config.py  config.yaml  server_config.yaml
backend/docx_handler/: __init__.py  general.py  hust.py  utils.py
backend/filters/: general.py
backend/filters/templates/: templates.py
backend/logger/: __init__.py
backend/reference-docs/: HUST.docx
backend/test/test_case/: 5.2数据结构实验报告.md
backend/test/test_cxx2flow/: test_cxx2flow.md
contribute/: index.html
docs/: contribute.md  grammar.md  index.md  introduction.md  preview.md  webui.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  config.js  index.css
grammar/: index.html
introduction/: index.html
preview/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/introduction/: index.html
site/webui/: index.html
webui/: index.html
